--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,15 +1,31 @@
 .callout {
-	
+    max-width: 400px;
+    margin: 10px;
+    border: 1px solid rgb(0 0 0/ 0.1);
+    padding: 15px;
+    background-color: #247;
+    color: white;
 }
 
 .callout img {
-	
+    float: right;
+    margin: 0 0 10px 15px;
+    border: 1px solid black;
+    padding: 3px;
+    background-color: white;
+    width: 200px;
+    height: auto;
 }
 
 blockquote {
-	
+    margin: 0px;
+
 }
 
 cite {
-	
+    display: block;
+    padding: 10px 0px 0px 0px;
+    border-top: 1px dotted white;
+    text-align: right;
+    font-size: smaller;
 }
