--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,15 @@ h1 {
     color: darkblue;
 }
 
+main {
+    max-width: 50rem;
+}
+
+main img {
+    width: 9rem;
+    height: auto;
+}
+
 img {
     width: 150px;
     height: auto;
@@ -22,5 +31,26 @@ img {
 }
 
 p {
-    padding: 10px;
+    padding: 0px;
+}
+
+aside {
+    width: 20em;
+    margin: 1em;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1em;
+    background-color: #eee;
+    color: black;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin: 15px;
+    border-top: 1px solid black;
+    text-align: center;
 }
