--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+:root {}
+
 nav {
     background-color: rgb(38, 38, 173);
     padding: 10px;
@@ -14,7 +16,7 @@ h1 {
 }
 
 main {
-    max-width: 150px;
+    max-width: 300px;
 }
 
 main img {
