--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,7 +39,7 @@ main {
 }
 
 main img {
-    width: 9rem;
+    width: 15rem;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
@@ -56,20 +56,20 @@ p {
 aside {
     width: 20em;
     text-align: center;
+    position: relative;
 }
 
 aside img {
     width: 200px;
     height: auto;
-    position: relative;
-    z-index: 1;
 }
 
 aside h2 {
     color: black;
     position: absolute;
     z-index: 2;
-    left: 180px;
+    left: 160px;
+    top: 25px;
 }
 
 footer {
