--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,8 +34,42 @@ h1 {
     margin: 1rem;
 }
 
+a {
+    color: #00f;
+}
+
+header,
+.grid,
+footer {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+nav {
+    background-color: steelblue;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+nav a {
+    display: block;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #fff;
+}
+
 main {
     max-width: 700px;
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
+h1 {
+    border-bottom: 1px solid #222;
 }
 
 main img {
@@ -54,9 +88,12 @@ p {
 }
 
 aside {
-    width: 20em;
-    text-align: center;
+    max-width: 30rem;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    text-align: center;
+    margin: 10px 0;
 }
 
 aside img {
@@ -78,6 +115,17 @@ footer {
     text-align: center;
 }
 
+footer {
+    background-color: #3e3e3e;
+    color: #fff;
+    padding: 2rem 1rem;
+}
+
+ul {
+    list-style: none;
+    padding: 1rem;
+}
+
 /* Class Selectors */
 .box {
     margin: 1rem;
@@ -85,6 +133,11 @@ footer {
     padding: 1rem;
     background-color: var(--secondary-color);
     color: var(--text-color-1);
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
 
 .indent {
