--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,7 +63,7 @@ nav a {
 }
 
 main {
-    max-width: 700px;
+    max-width: 50rem;
     grid-column: 2/3;
     margin: 1rem;
 }
@@ -73,7 +73,7 @@ h1 {
 }
 
 main img {
-    width: 15rem;
+    width: 19rem;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
@@ -83,8 +83,8 @@ main img {
 }
 
 p {
-    padding: 0;
-    margin: 1rem;
+    padding: 1rem;
+    margin: .5rem;
 }
 
 aside {
@@ -93,7 +93,7 @@ aside {
     grid-column: 1/2;
     grid-row: 1/2;
     text-align: center;
-    margin: 10px 0;
+    /* margin: 10px 0; */
 }
 
 aside img {
@@ -128,7 +128,7 @@ ul {
 
 /* Class Selectors */
 .box {
-    margin: 1rem;
+    /* margin: 1rem; */
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1rem;
     background-color: var(--secondary-color);
@@ -138,6 +138,8 @@ ul {
 .grid {
     display: grid;
     align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .indent {
