--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -243,8 +243,8 @@ footer {
 .map-container {
     position: relative;
     width: 100%;
-    height: 0;
-    padding-bottom: 56.25%;
+    height: 38rem;
+    padding-bottom: 56%;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12);
